# dabarat

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  claude-code-ecosystem.md  pyproject.toml
agent_docs/: INDEX.md  api-reference.md  architecture.md  client-architecture.md  motion-one.md  toc-navigation-execplan.md  workspace-system.md
dabarat/: INDEX.md  __init__.py  __main__.py  frontmatter.py  history.py  pdf_export.py  server.py  template.py
dabarat/static/: palette.js
docs/: INDEX.md  annotations.md  backstory.md  command-palette.md  finder-integration.md  workspaces.md
examples/: INDEX.md  joseph-campbell-qakat.prompt.md  qakat-output-formats.prompt.md  qakat-system.prompt.md  sample.md  wysiwyg-test.md
macos/: INDEX.md  Info.plist  build.sh
md_preview_and_annotate/: INDEX.md  __init__.py  __main__.py  annotations.py  bookmarks.py  diff.py  history.py  pdf_export.py  recent.py  server.py  template.py  workspace.py
md_preview_and_annotate/static/: INDEX.md  app.js  palette.js  styles.css
plans/: 001-tabs-annotations-sidebar.md  002-command-palette-tagging.md  003-prompt-engineering-modules.md  004-modularization-flow.md  005-twemoji.md  006-multi-emoji-set.md  007-mermaid-rename-color-scheme.md  008-ux-research.md  009-edit-home-settings-history.md  010-responsive-layout.md  011-home-mermaid-rename.md  012-home-page-redesign.md  INDEX.md  handoff-twitter-promo.md
screenshots/: INDEX.md
screenshots/labyrinth-dbr/: README.md  dark.html  light.html
scripts/verify/: phase10_sqlite_store.py  phase1_launch_safety.sh  phase2_foundation.sh  (+7 more)
(+54 files in other folders)
