[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown-dabarat"
version = "0.2.0"
description = "Zero-dependency Python markdown previewer with annotations"
requires-python = ">=3.10"

[project.scripts]
dabarat = "md_preview_and_annotate.__main__:main"
dbrt = "md_preview_and_annotate.__main__:main"
mdpreview = "md_preview_and_annotate.__main__:main"
mdp = "md_preview_and_annotate.__main__:main"

[tool.setuptools.packages.find]
include = ["md_preview_and_annotate*"]

[tool.setuptools.package-data]
md_preview_and_annotate = ["static/**/*"]
