[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown-dabarat"
version = "0.2.0"
description = "Zero-dependency Python markdown previewer with annotations"
requires-python = ">=3.10"

[project.scripts]
dabarat = "dabarat.__main__:main"
dbrt = "dabarat.__main__:main"
mdpreview = "dabarat.__main__:main"
mdp = "dabarat.__main__:main"

[tool.setuptools.packages.find]
include = ["dabarat*"]

[tool.setuptools.package-data]
dabarat = ["static/**/*"]
